FIX text in date dropdown and steps dropdown should be black and the arrows should be blue FIX text under the number 3221 on the page showing the data for the delected date and spacing not consistent with design

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -120,6 +120,25 @@ rating {
         height: 18px;
     }
 }
+.select-blue-placeholder {
+    margin-top: -1px;
+    font-weight: 300 !important;
+    font-family: $font-family-oswald !important;
+    color: $white !important;
+    font-size: 16px !important;
+    line-height: 15px;
+    overflow: visible !important;
+}
+
+.select-white-placeholder {
+    margin-top: -2px;
+    font-weight: 300 !important;
+    font-family: $font-family-helvetica !important;
+    color: $dark-gray1 !important;
+    font-size: 12px !important;
+    line-height: 15px;
+    overflow: visible !important;
+}
 
 ion-select {
     font-weight: 300;
@@ -128,3 +147,15 @@ ion-select {
     font-size: 12px;
     line-height: 15px;
 }
+
+ion-select.select-blue {
+    font-weight: 300;
+    font-family: $font-family-oswald;
+    color: $white !important;
+    font-size: 16px;
+    line-height: 15px;
+}
+.alert-button.sc-ion-alert-ios {
+    color: $blue;
+}
+
